--- a/templates/index.html
+++ b/templates/index.html
@@ -65,7 +65,7 @@
     <div id="chat-container">
         <div id="messages"></div>
         <div id="input-container">
-            <input type="text" id="message" placeholder="Type your message here...">
+            <input type="text" id="message" placeholder="Escriba su mensaje acá....">
             <button id="sendButton">Send</button>
         </div>
     </div>
